Edit function working, fix css overflow at input

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -57,10 +57,38 @@ h4 {
   margin-right: auto;
 }
 
+input.h4 {
+  border: none;
+  appearance: none;
+  -webkit-appearance: none;
+  overflow-wrap: break-word;
+  color: black;
+  font-size: 18px;
+  text-align: left;
+  padding-left: 5px;
+  margin-right: auto;
+}
+.h4:focus,
+.h5:focus {
+  /* outline: none; */
+}
+
 h5 {
   color: black;
   font-size: 18px;
   text-align: right;
+}
+input.h5 {
+  border: none;
+  appearance: none;
+  -webkit-appearance: none;
+  overflow-wrap: break-word;
+  color: black;
+  font-size: 18px;
+  text-align: right;
+  padding-left: 5px;
+  margin-right: auto;
+  margin-left: 0px;
 }
 
 .logo {
